# os-lab1

./: CMakeLists.txt  creator.cpp  employee.cpp  main.cpp  reporter.cpp
tests/: test_employee.cpp
